# swaytab

./: Cargo.toml  README.md  Swaytab.toml
src/: config.rs  error.rs  main.rs
