[package]
name = "swaytab"
version = "0.2.0"
authors = ["Edwin Svensson <swaytab@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swayipc = "2.7.2"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
dirs = "3.0.2"
giftwrap = "0.1"
